--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -16,15 +16,16 @@
     }
 
     #authorisationForm {
-        background-color: #CADCFC;
+        background-color: #b4ebf8;
         padding: 20px;
         border-radius: 10px;
         width: 400px;
     }
 
     #loginForm {
-        border: 2px solid rgb(56, 82, 110);
+        border: 5px solid #ca580d;
         padding: 20px;
+        border-radius: 20px;
     }
 
     label {
@@ -39,6 +40,14 @@
         margin-bottom: 20px;
         box-sizing: border-box;
         border: 5px solid rgb(9, 34, 93);
+        border-radius: 20px;
+        font-weight: bolder;
+        font-size: 15px;
+    }
+
+    input[type="text"]:hover,
+    input[type="password"]:hover {
+        border: 5px solid #EF9C66;
     }
 
     input[type="submit"] {
@@ -51,11 +60,12 @@
         background-color: #00246B;
         color: white;
         border: none;
-        border-radius: 5px;
+        border-radius: 10px;
     }
 
     input[type="submit"]:hover {
-        background-color: darkred;
+        background-color: rgb(9, 96, 76);
+        font-weight: bolder;
     }
 </style>
 
