--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -1,151 +1,172 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
-<head>
-
+  <head>
     <title>Expense Tracker</title>
-    <link rel="icon" type="image/x-icon" href="./c02aae5931cc43c4b8af9ec441e7b29f.png">
-</head>
-<style>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./c02aae5931cc43c4b8af9ec441e7b29f.png"
+    />
+  </head>
+  <style>
     #mainContainer {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        background-color: rgb(255, 255, 255);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: rgb(255, 255, 255);
     }
 
     #authorisationForm {
-        background-color: #b4ebf8;
-        padding: 20px;
-        border-radius: 10px;
-        width: 400px;
+      background-color: #b4ebf8;
+      padding: 20px;
+      border-radius: 10px;
+      width: 400px;
     }
 
     #loginForm {
-        border: 5px solid #ca580d;
-        padding: 20px;
-        border-radius: 20px;
+      border: 5px solid #ca580d;
+      padding: 20px;
+      border-radius: 20px;
     }
 
     label {
-        display: block;
-        font-size: 1.2em;
+      display: block;
+      font-size: 1.2em;
     }
 
     input[type="text"],
     input[type="password"] {
-        width: 100%;
-        padding: 10px;
-        margin-bottom: 20px;
-        box-sizing: border-box;
-        border: 5px solid rgb(9, 34, 93);
-        border-radius: 20px;
-        font-weight: bolder;
-        font-size: 15px;
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 20px;
+      box-sizing: border-box;
+      border: 5px solid rgb(9, 34, 93);
+      border-radius: 20px;
+      font-weight: bolder;
+      font-size: 15px;
     }
 
     input[type="text"]:hover,
     input[type="password"]:hover {
-        border: 5px solid #EF9C66;
+      border: 5px solid #ef9c66;
     }
 
     input[type="submit"] {
-        margin-left: 35px;
-        margin-top: 30px;
-        padding: 15px;
-        font-size: 1.2em;
-        margin-right: 10px;
-        cursor: pointer;
-        background-color: #00246B;
-        color: white;
-        border: none;
-        border-radius: 10px;
+      margin-left: 35px;
+      margin-top: 30px;
+      padding: 15px;
+      font-size: 1.2em;
+      margin-right: 10px;
+      cursor: pointer;
+      background-color: #00246b;
+      color: white;
+      border: none;
+      border-radius: 10px;
     }
 
     input[type="submit"]:hover {
-        background-color: rgb(9, 96, 76);
-        font-weight: bolder;
+      background-color: rgb(9, 96, 76);
+      font-weight: bolder;
     }
-</style>
+  </style>
 
-<body>
+  <body>
     <div id="mainContainer">
-        <div id="logo">
-            <img src="./c02aae5931cc43c4b8af9ec441e7b29f.png" alt="office logo">
-        </div>
-        <div id="authorisationForm">
-            <form id="loginForm">
-                <label for="username">Username :</label>
-                <input type="text" id="username" name="username" placeholder="please enter your username..." required
-                    pattern="^[a-zA-Z0-9]{4,10}$"><br>
-                <label for="password">Password :</label>
-                <input type="password" id="password" name="password" placeholder="please type your password..." required
-                    pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*[@#$%^&*])(?=.*\d)[A-Za-z\d@#$%^&*]{7,15}$"><br>
-                <input type="submit" value="LOGIN" onclick="loginUser(event)">
-                <input type="submit" value="REGISTER" onclick="registerUser(event)">
-            </form>
+      <div id="logo">
+        <img src="./c02aae5931cc43c4b8af9ec441e7b29f.png" alt="office logo" />
+      </div>
+      <div id="authorisationForm">
+        <form id="loginForm">
+          <label for="username">Username :</label>
+          <input
+            type="text"
+            id="username"
+            name="username"
+            placeholder="please enter your username..."
+            required
+            pattern="^[a-zA-Z0-9]{4,10}$"
+          /><br />
+          <label for="password">Password :</label>
+          <input
+            type="password"
+            id="password"
+            name="password"
+            placeholder="please type your password..."
+            required
+            pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*[@#$%^&*])(?=.*\d)[A-Za-z\d@#$%^&*]{7,15}$"
+          /><br />
+          <input type="submit" value="LOGIN" onclick="loginUser(event)" />
+          <input type="submit" value="REGISTER" onclick="registerUser(event)" />
+        </form>
 
-            <script>
+        <script>
+          async function registerUser(event) {
+            event.preventDefault();
+            const username = document.getElementById("username").value;
+            const password = document.getElementById("password").value;
 
-                async function registerUser(event) {
-                    event.preventDefault();
-                    const username = document.getElementById("username").value;
-                    const password = document.getElementById("password").value;
-
-                    try {
-                        const response = await fetch("https://localhost:3090/auth/register", {
-                            method: "POST",
-                            headers: {
-                                "Content-Type": "application/json"
-                            },
-                            body: JSON.stringify({ username, password }),
-                        })
-
-                        const data = await response.json();
-                        if (data.success === true) {
-                            alert(data.data)
-                            document.getElementById("username").value = "";
-                            document.getElementById("password").value = "";
-                        } else {
-                            alert(data.error)
-                        }
-                    } catch (err) {
-                        console.log("The error is -", err);
-                    }
+            try {
+              const response = await fetch(
+                "https://127.0.0.1:3090/auth/register",
+                {
+                  method: "POST",
+                  headers: {
+                    "Content-Type": "application/json",
+                  },
+                  body: JSON.stringify({ username, password }),
+                  mode: "cors"
                 }
+              );
 
-                async function loginUser(event) {
-                    event.preventDefault();
+              const data = await response.json();
+        
+              if (data.success === true) {
+                alert(data.data);
+                document.getElementById("username").value = "";
+                document.getElementById("password").value = "";
+              } else {
+                alert(data.error);
+              }
+            } catch (err) {
+              console.log("The error is -", err);
+            }
+          }
 
-                    const username = document.getElementById("username").value;
-                    const password = document.getElementById("password").value;
+          async function loginUser(event) {
+            event.preventDefault();
 
-                    try {
-                        const response = await fetch("https://localhost:3090/auth/login", {
-                            method: "POST",
-                            headers: {
-                                "Content-Type": "application/json"
-                            },
-                            body: JSON.stringify({ username, password }),
-                            credentials: "include"
-                        })
+            const username = document.getElementById("username").value;
+            const password = document.getElementById("password").value;
 
-                        const data = await response.json();
-
-                        if (data.success === true) {
-                            alert(data.data)
-                            window.location.href = "main.html"
-                        } else {
-                            alert(data.error)
-                        }
-                    } catch (err) {
-                        console.log("The error is -", err)
-                    }
+            try {
+              const response = await fetch(
+                "https://127.0.0.1:3090/auth/login",
+                {
+                  method: "POST",
+                  headers: {
+                    "Content-Type": "application/json",
+                  },
+                  body: JSON.stringify({ username, password }),
+                  credentials: "include",
+                  mode: "cors"
                 }
-            </script>
-        </div>
+              );
+
+              const data = await response.json();
+
+              if (data.success === true) {
+                alert(data.data);
+                window.location.href = "main.html";
+              } else {
+                alert(data.error);
+              }
+            } catch (err) {
+              console.log("The error is -", err);
+            }
+          }
+        </script>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
