--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -97,7 +97,7 @@
             pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*[@#$%^&*])(?=.*\d)[A-Za-z\d@#$%^&*]{7,15}$"
           /><br />
           <input type="submit" value="LOGIN" onclick="loginUser(event)" />
-          <input type="submit" value="REGISTER" onclick="registerUser(event)" />
+          <input type="submit" value="SIGN IN" onclick="registerUser(event)" />
         </form>
 
         <script>
@@ -108,7 +108,7 @@
 
             try {
               const response = await fetch(
-                "https://127.0.0.1:3090/auth/register",
+                "https://adityadey.com/auth/register",
                 {
                   method: "POST",
                   headers: {
@@ -141,7 +141,7 @@
 
             try {
               const response = await fetch(
-                "https://127.0.0.1:3090/auth/login",
+                "https://adityadey.com/auth/login",
                 {
                   method: "POST",
                   headers: {
