bugs fixed in frontend

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -108,7 +108,7 @@
 
             try {
               const response = await fetch(
-                "https://127.0.0.1:3090/auth/register",
+                "/auth/register",
                 {
                   method: "POST",
                   headers: {
@@ -141,7 +141,7 @@
 
             try {
               const response = await fetch(
-                "https://127.0.0.1:3090/auth/login",
+                "/auth/login",
                 {
                   method: "POST",
                   headers: {
