fixed a minor bug in frontend login form

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -97,7 +97,7 @@
             pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*[@#$%^&*])(?=.*\d)[A-Za-z\d@#$%^&*]{7,15}$"
           /><br />
           <input type="submit" value="LOGIN" onclick="loginUser(event)" />
-          <input type="submit" value="SIGN IN" onclick="registerUser(event)" />
+          <input type="submit" value="SIGN UP" onclick="registerUser(event)" />
         </form>
 
         <script>
