changed the routes to standard practice

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -108,7 +108,7 @@
 
             try {
               const response = await fetch(
-                "/auth/register",
+                "/api/auth/register",
                 {
                   method: "POST",
                   headers: {
@@ -141,7 +141,7 @@
 
             try {
               const response = await fetch(
-                "/auth/login",
+                "/api/auth/login",
                 {
                   method: "POST",
                   headers: {
